[package]
name = "waterfalls"
version = "0.5.0"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Waterfalls provide blockchain data to liquid light-wallet client"
license = "MIT"
repository = "https://github.com/RCasatta/waterfalls"
categories = ["cryptography::cryptocurrencies"]


[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
elements = { version = "0.25.0", features = ["serde"] }
env_logger = "0.11.3"
hyper = { version = "1.2.0", features = ["full"] }
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "macros", "signal"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.5", features = ["full", "server"] }
hex = "0.4.3"
reqwest = "0.12.0"
anyhow = "1.0.86"
rocksdb = { version = "0.22.0", features = [
    "multi-threaded-cf",
], optional = true }
fxhash = "0.2.1"
elements-miniscript = "0.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
form_urlencoded = "1.2.1"
bitcoind = { version = "0.36", optional = true } # it's used instead of elementsd because we don't use autodownload, neither validatepegin and we also have to specify custom args (rest=1)
age = { version = "0.11.0", features = ["armor"] }
base64 = "0.21"
prometheus = { version = "0.13.4", features = ["process"] }
lazy_static = "1.5.0"


[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.10.1"

[features]
default = ["test_env", "db"]
db = ["rocksdb"]
test_env = ["bitcoind"]

[[bench]]
name = "benches"
harness = false
