[package]
name = "waterfalls"
version = "0.9.1"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Waterfalls provide blockchain data to liquid and bitcoin light-client wallets"
license = "MIT"
repository = "https://github.com/RCasatta/waterfalls"
categories = ["cryptography::cryptocurrencies"]


[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
elements = { version = "0.25.0", features = ["serde"] }
bitcoin = { version = "0.32.5", features = [
    "secp-recovery",
    "base64",
    "rand-std",
] }
env_logger = "0.11.3"
hyper = { version = "1.2.0", features = ["full"] }
log = "0.4.21"
tokio = { version = "1.43.0", features = ["rt", "macros", "signal"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.5", features = ["full", "server"] }
reqwest = "0.12.12"
anyhow = "1.0.86"
rocksdb = { version = "0.24.0", features = [
    "multi-threaded-cf",
    "zstd",
], optional = true }
fxhash = "0.2.1"
elements-miniscript = "0.4.0"
miniscript = "12.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
form_urlencoded = "1.2.1"
bitcoind = { version = "0.36", optional = true } # it's used instead of elementsd because we don't use autodownload, neither validatepegin and we also have to specify custom args (rest=1)
age = { version = "0.11.0", features = ["armor"] }
base64 = "0.21"
prometheus = { version = "0.13.4", default-features = false, features = [
    "process",
] }
lazy_static = "1.5.0"
minicbor = { version = "0.23", default-features = false, features = [
    "alloc",
    "derive",
] }
prefix_uvarint = "0.6.1"
lrumap = "0.1.0"
hex-simd = "0.8.0"


[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.10.1"
lwk_wollet = { version = "0.10.0", features = ["test_wallet"] }
lwk_common = { version = "0.10.0" }

[features]
default = ["test_env", "db"]
db = ["rocksdb"]
test_env = ["bitcoind"]

# tests that require a locally running synced node, or taking very long time to run like the one
# creating the benchmark table in the readme or the one inspecting logs
synced_node = []
bench_test = []
examine_logs = []

[patch.crates-io]
lwk_wollet = { git = "https://github.com/blockstream/lwk", rev = "ba7eaf71e7be497abaf3f3b88003c9e639f145a3" }
lwk_common = { git = "https://github.com/blockstream/lwk", rev = "ba7eaf71e7be497abaf3f3b88003c9e639f145a3" }

[[bench]]
name = "benches"
harness = false
